[tool.poetry]
name = "demo-project"
version = "0.1.0"
description = "A basic demonstration project environment."
authors = ["Duncan Dickinson <dickinsond@google.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2"
Django = "^4.1"

[tool.poetry.group.dev.dependencies]
cyclonedx-bom = "^3.10"
tomlkit = "^0.11"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
